Fix cursor getting stuck while moving up / down

BUG: 423253