src/view/kateviewinternal.cpp
@@ -1795,6 +1795,23 @@ void KateViewInternal::cursorUp(bool sel)
 
     KTextEditor::Cursor c = renderer()->xToCursor(pRange, m_preservedX, !view()->wrapCursor());
 
+    // Maybe we didn't move at all?
+    // Try to update the cursor according to the X in cur line
+    if (!pRange.includesCursor(c) || c == m_displayCursor) {
+        int curX = renderer()->cursorToX(thisLine, m_displayCursor.column());
+        c = renderer()->xToCursor(pRange, curX, !view()->wrapCursor());
+    }
+
+    // still didn't move? => just decrement the col / line
+    if (c == m_displayCursor) {
+        if (c.column() > 0) {
+            c.setColumn(c.column() - 1);
+        } else {
+            // This is not the first line
+            c.setLine(c.line() - 1);
+        }
+    }
+
     updateSelection(c, sel);
     updateCursor(c);
 }
